add start screen and room screen

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <div id="game-frame"></div>
     <script src="./scripts/pixi.min.js"></script>
-    <script src="./scripts/constants.js"></script>
     <script src="./scripts/randomEnemies.js"></script>
     <script src="./scripts/loadSprites.js"></script>
     <script src="./scripts/index.js"></script>
